# xhycom

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: draft-release-notes.yml  publish-release-notes.yml  publish.yml  tests.yml
ci/: environment-regrid.yml
conda-recipe/: meta.yaml
docs/: analysis.ipynb  api.md  big-computations.ipynb  conf.py  contributing.md  environment.yml  index.md  installation.md  lazy-loading.ipynb  quickstart.ipynb  regridding.ipynb  releases.md  time-averaging.ipynb  why-xarray.ipynb  why-xarray.md  why-xhycom.md
tests/: conftest.py  test_postprocess.py  test_reader.py  test_real_data.py  test_regrid.py
tests/data/: _subset_glorys.py  _subset_tp0.py  archm.2006_190_12.b  glorys_grid_subset.nc
xhycom/: __init__.py  _abfile.py  _discovery.py  _postprocess.py  _reader.py  _regrid.py  _time.py  _transect.py  _transport.py
