[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xhycom"
version = "0.1.0"
description = "xarray interface for HYCOM a.b binary output files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nora Loose", email = "nora.loose@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "xarray",
    "cftime",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
lazy = ["dask"]
# Vertical regridding (regrid_vertical / depth interpolation) is pure-Python
# and fully pip-installable:
#     pip install xhycom[regrid]
regrid = ["xgcm", "dask"]
# Lateral regridding (regrid_horizontal / the full regrid wrapper) additionally
# needs xESMF.  Its ESMF/esmpy backend has no PyPI wheels, so it must come from
# conda-forge -- there is no pip-only path.  Ready-made env:
#     conda env create -f ci/environment-regrid.yml
dev = ["pytest", "pytest-cov"]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "myst-nb",
    "sphinx-copybutton",
]

[project.urls]
Homepage      = "https://github.com/nansencenter/xhycom"
Documentation = "https://xhycom.readthedocs.io"
"Bug Tracker" = "https://github.com/nansencenter/xhycom/issues"
Source        = "https://github.com/nansencenter/xhycom"

[tool.setuptools.packages.find]
where = ["."]
include = ["xhycom*"]
